--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess The Number</title>
+    <link rel="stylesheet" href="./index.css">
  
 </head>
 <body>
@@ -17,8 +18,10 @@
 
     </div> 
 
-    <label for="guessNumber">Enter the Guessed Number : </label>
+    <label for="guessNumber">Enter the Guessed Number  </label> 
+     <br>
     <input type="text" id="guessNumber" class="guessNumber">
+    <br>
     <button type="submit"  class="guessSubmit">Submit Guess</button>
 
     
